# auspex-lakehouse

./: .dockerignore  .env.example  .gitignore  Dockerfile_dagster  Dockerfile_user_code  README.md  dagster.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  workspace.yaml
.claude/: settings.json
.dg/: telemetry.yaml
.dlt/: config.toml
.github/workflows/: ci.yml  dbt-docs.yml
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/models/: overview.md
dbt/models/bronze/: _bronze__celestrak__models.yml  _bronze__docs.md  _bronze__models.yml  _bronze__nasa__models.yml  _bronze__sources.yml  _bronze__spacetrack__models.yml  bronze_apod.sql  bronze_boxscore.sql  bronze_cdm.sql  bronze_celestrak_space_weather.sql  bronze_cme.sql  bronze_cme_analysis.sql  bronze_decay.sql  bronze_flr.sql  bronze_gp.sql  bronze_gst.sql  bronze_hss.sql  bronze_ips.sql  bronze_mpc.sql  bronze_nasa_astronomy_picture_of_the_day.sql  bronze_nasa_donki_coronal_mass_ejection_analyses.sql  bronze_nasa_donki_coronal_mass_ejections.sql  bronze_nasa_donki_geomagnetic_storms.sql  bronze_nasa_donki_high_speed_streams.sql  bronze_nasa_donki_interplanetary_shocks.sql  bronze_nasa_donki_magnetopause_crossings.sql  bronze_nasa_donki_notifications.sql  bronze_nasa_donki_radiation_belt_enhancements.sql  bronze_nasa_donki_solar_energetic_particles.sql  bronze_nasa_donki_solar_flares.sql  bronze_nasa_donki_wsa_enlil_simulations.sql  bronze_nasa_near_earth_object_feed.sql  bronze_nasa_near_earth_object_lookups.sql  bronze_neo_lookup.sql  bronze_neows.sql  bronze_notifications.sql  bronze_rbe.sql  bronze_satcat.sql  bronze_sep.sql  bronze_space_track_boxscore.sql  (+7 more)
deploy/: dagster.yaml
docs/superpowers/plans/: 2026-06-28-dbt-bronze.md  2026-06-28-nasa-donki.md  2026-06-28-nasa-neo-lookup.md  2026-06-28-spacetrack.md  2026-06-29-bronze-dbt-docs.md  2026-06-29-bronze-descriptive-names.md  2026-06-29-celestrak-space-weather.md  2026-06-29-spacetrack-rate-limit.md
docs/superpowers/specs/: 2026-06-28-dbt-bronze-design.md  2026-06-28-docker-cicd-design.md  2026-06-28-nasa-donki-design.md  2026-06-28-nasa-neo-lookup-design.md  2026-06-28-spacetrack-design.md  2026-06-29-bronze-dbt-docs-design.md  2026-06-29-bronze-descriptive-names-design.md  (+2 more)
scripts/: cancel_stale_backfills.py  migrate_bronze_rename.py
src/auspex_lakehouse/: definitions.py
tests/: conftest.py  test_celestrak_assets.py  test_celestrak_common.py  test_celestrak_sources.py  test_dbt_bronze.py  test_definitions.py  test_delta_helpers.py  test_donki.py  test_donki_asset.py  test_nasa_sources.py  test_neo_lookup.py  test_neo_lookup_asset.py  test_spacetrack_assets.py  test_spacetrack_common.py  test_spacetrack_ratelimit.py  test_spacetrack_sources.py
(+23 files in other folders)
