[project]
name = "auspex_lakehouse"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "boto3>=1.43.0",
    "dagster==1.13.11",
    "dagster-dbt>=0.29.11",
    "dagster-dlt>=0.29.11",
    # Required in the user-code image: the DefaultRunLauncher executes runs in this
    # container, and the run worker must load the Postgres storage from the instance ref.
    "dagster-postgres>=0.29.11",
    "dbt>=1.0.0.40.18",
    "dlt[deltalake,s3]>=1.28.1",
    "polars>=1.42.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "auspex_lakehouse"
registry_modules = [
    "auspex_lakehouse.components.*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative starter rule set: pyflakes (F), pycodestyle errors (E),
# import sorting (I). Expand as the codebase matures.
select = ["E", "F", "I"]
